--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.6.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
     "core-js": "^2.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.10.1",
     "ng-zorro-antd": "^7.4.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
